# nox-poetry

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
nox_poetry/: __about__.py
tests/: test_metadata.py
